--- a/yesTech.html
+++ b/yesTech.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+        body{
+            overflow-x: hidden;
+            /* removed the extra scrolling of x-axis,because the item-1 is 
+            outside the viewport */
+        }
+        .item-1{
+            position: absolute;
+            top: -50px;
+            right: -50px;;
+        }
+        .item-2{
+            position: absolute;
+            z-index: -1;
+            /* z-index is for to put item-2 at the bottom of the div */
+        }
+        
+    </style>
 </head>
 <body>
     <div class="">
@@ -15,8 +34,22 @@
     </div>
 
 
-
-
+    <h1 class="text-danger m-5">
+        css positions
+    </h1>
+    <div class="container">
+        <div class=" row gap-3 text-center text-light">
+            <div class="col-3 p-5 item-1 rounded column-gap-5 bg-info">1</div>
+            <div class="col-3 p-5 item-2 rounded column-gap-5 bg-success">2</div>
+            <div class="col-3 p-5 item-3 rounded column-gap-5 bg-danger">3</div>
+            <div class="col-3 p-5 item-4 rounded column-gap-5 bg-dark">4</div>
+            <div class="col-3 p-5 item-5 rounded column-gap-5 bg-warning">5</div>
+            <div class="col-3 p-5 item-6 rounded column-gap-5 bg-primary">6</div>
+            <div class="col-3 p-5 item-7 rounded column-gap-5 bg-danger">7</div>
+            <div class="col-3 p-5 item-8 rounded column-gap-5 bg-info">8</div>
+            <div class="col-3 p-5 item-9 rounded column-gap-5 bg-success">9</div>
+        </div>
+    </div>
     <script src="yesTech.js"></script>
 </body>
 </html>
