used shortcuts to adding variables

--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
     
     <button onclick="
         cartQuantity = cartQuantity + 1;
+        // we can use cartQuantity += 1, instead of cartQuantity = cartQuantity + 1;
+        // both are same.
         console.log( `Cart Quantity : ${cartQuantity}` );
     ">Add to Cart</button>
 
     <button onclick="
-        cartQuantity = cartQuantity + 2;
+        cartQuantity += 2;
         console.log( `Cart Quantity : ${cartQuantity}` );
     ">+2</button>
 
     <button onclick="
-    cartQuantity = cartQuantity + 3;
+    cartQuantity += 3;
     console.log( `Cart Quantity : ${cartQuantity}` );
     ">+3</button>
 
