--- a/rock-paper-scissors-06.html
+++ b/rock-paper-scissors-06.html
@@ -10,13 +10,26 @@
 
     <button onclick="
         const randomNumber = Math.random();
+        let computerMove = '';
         if (randomNumber >= 0 && randomNumber < 1/3){
-            console.log('rock');
+            computerMove ='rock';
         }else if (randomNumber >= 1/3 && randomNumber < 2/3){
-            console.log('Papper');
+            computerMove = 'Papper';
         }else{
-            console.log('Scissor');
+            computerMove = 'Scissor';
         }
+
+        let result;
+        if (computerMove === 'rock'){
+            result = 'tie';
+        }else if (computerMove === 'Papper'){
+            result = 'you lose.'
+        }else if (computerMove === 'Scissor'){
+            result = 'you won.'
+        }
+
+        alert(`you picked rock. computer picked ${computerMove}. ${result} `)
+        
     ">Rock </button>
         
     <button onclick="
