completed some questions from chapter 7

--- a/exercises.html
+++ b/exercises.html
@@ -59,6 +59,26 @@
         }
         console.log(result + ' '+ name)
 
+        // chapter 7 exercises
+
+        // 7a.7b.7c
+        function greet (name = 'there'){
+            console.log (`Hello ${name}`);
+            // console.log ('Hello ' + name );
+            // console.log (`Hello ${name}`); and console.log ('Hello ' + name ); are same
+        }
+        greet ();
+        greet ();
+
+        // 7b.
+        greet ('ajmal')
+
+        //7c.
+        greet();
+        //  Added a default value 'there' in parameter.so whenever i call 
+        //  function 'greet' without a value it will display 'there' as it's 
+        //  default value.
+
 
     </script>
 </body>
