--- a/rock-papper-scissors-08.html
+++ b/rock-papper-scissors-08.html
@@ -14,8 +14,18 @@
 
     <button onclick="playGame('Scissor')">Scissor</button>
 
+    
+
 
     <script>
+
+        const score = {
+            wins : 0,
+            losses : 0,
+            ties : 0
+        };
+
+
         function playGame(playerMove){
             const computerMove = pickComputerMove(); 
 
@@ -59,7 +69,18 @@
                         result = 'tie'
                     } 
                 }
-                alert(`you picked ${playerMove}. computer picked ${computerMove}. ${result} `)
+
+                if (result === 'you won.'){
+                    score.wins = score.wins + 1;  // or you can siply write 
+                                                 // score.wins += 1;
+                }else if (result === 'you lose.') {
+                    score.losses += 1;
+                }else {
+                    score.ties += 1;
+                }
+
+                alert(`you picked ${playerMove}. computer picked ${computerMove}. ${result}
+wins : ${score.wins}, Losses : ${score.losses}, Ties : ${score.ties}`);
             
             return computerMove;
             }
