--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <p>Todo List</p>
-    <input type="text" placeholder="Todo name">
-    <button>Add</button>
+    <input class="js-name-input" type="text" placeholder="Todo name">
+    <button onclick="addTodo();" >Add</button>
+
+
+    <script src="11-todo-list.js"></script>
 </body>
 </html>
