--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -10,6 +10,7 @@
     <input class="js-name-input" type="text" placeholder="Todo name">
     <button onclick="addTodo();" >Add</button>
 
+    <div class="js-todo-list"></div>
 
     <script src="11-todo-list.js"></script>
 </body>
