--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -8,6 +8,7 @@
 <body>
     <p>Todo List</p>
     <input class="js-name-input" type="text" placeholder="Todo name">
+    <input type="date" class="js-due-date-input">
     <button onclick="addTodo();" >Add</button>
 
     <div class="js-todo-list"></div>
