--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -22,6 +22,7 @@
             padding: 5px;
             border: none;
             border-radius: 5px;
+            cursor: pointer;
         }
         .js-todo-list{
             margin-top: 15px;
@@ -33,6 +34,7 @@
             font-weight: 700;
             border: none;
             border-radius: 5px;
+            cursor: pointer;
         }
     </style>
 </head>
