--- a/inex.html
+++ b/inex.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
         body{
             background: rgb(25, 25, 25);
@@ -45,7 +46,8 @@
     </style>
 </head>
 <body>
-    <p class="title" >Rock Paper Scissors</p>
+    <div class="container mt-5">
+        <p class="title" >Rock Paper Scissors</p>
 
     <button class="move-button" onclick="playGame('rock')">
         <img src="images/rock-emoji.png" alt="">
@@ -63,12 +65,13 @@
     <p class="js-result"></p>
     <p class="js-scoreUpdates"></p>
 
-    <button class="reset-score" onclick="
+    <button class="reset-score mt-4" onclick="
          score.wins = 0;
         score.losses = 0;
         score.ties = 0;
         updateScore();
     " >Reset Scores</button>
+    </div>
 
     
     <script>
