papper and scissors converted to small letters

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         <img src="images/rock-emoji.png" alt="">
      </button>
         
-    <button class="move-button" onclick="playGame('Paper')">
+    <button class="move-button" onclick="playGame('paper')">
         <img src="images/paper-emoji.png" alt="">
     </button>
 
-    <button class="move-button" onclick="playGame('Scissors')">
+    <button class="move-button" onclick="playGame('scissors')">
         <img src="images/scissors-emoji.png" alt="">
     </button>
 
